// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OctoRelayViewModel Constructor should set its certain properties 1`] = `
{
  "loginState": {
    "hasPermission": [MockFunction],
  },
  "onDataUpdaterPluginMessage": [Function],
  "settingsViewModel": {
    "access": {
      "permissions": {
        "PLUGIN_OCTORELAY_SWITCH": {
          "test": "I am PLUGIN_OCTORELAY_SWITCH",
        },
      },
    },
  },
}
`;

exports[`OctoRelayViewModel Message handler should process the supplied configuration: $() 1`] = `
[
  [
    "#navbar_plugin_octorelay",
  ],
]
`;

exports[`OctoRelayViewModel Message handler should process the supplied configuration: .html() 1`] = `
[
  [
    "<div>&#128161;</div>",
  ],
  [
    "<img src="plugin/dashboard/static/img/printer-icon.png">",
  ],
  [
    "<img src="plugin/dashboard/static/img/fan-icon.png">",
  ],
  [
    "<div>&#127774;</div>",
  ],
  [
    "ON",
  ],
]
`;

exports[`OctoRelayViewModel Message handler should process the supplied configuration: .popover() 1`] = `
[
  [
    "destroy",
  ],
  [
    "destroy",
  ],
  [
    "destroy",
  ],
  [
    "destroy",
  ],
  [
    "destroy",
  ],
]
`;

exports[`OctoRelayViewModel Message handler should process the supplied configuration: .toggle() 1`] = `
[
  [
    true,
  ],
  [
    true,
  ],
  [
    true,
  ],
  [
    true,
  ],
  [
    false,
  ],
]
`;

exports[`OctoRelayViewModel Message handler should process the supplied configuration: .tooltip() 1`] = `
[
  [
    "destroy",
  ],
  [
    "destroy",
  ],
  [
    "destroy",
  ],
  [
    "destroy",
  ],
  [
    "destroy",
  ],
  [
    {
      "placement": "bottom",
      "title": "Nozzle Light",
    },
  ],
  [
    {
      "placement": "bottom",
      "title": "Printer",
    },
  ],
  [
    {
      "placement": "bottom",
      "title": "Fan",
    },
  ],
  [
    {
      "placement": "bottom",
      "title": "Chassis Light",
    },
  ],
  [
    {
      "placement": "bottom",
      "title": "R5",
    },
  ],
]
`;

exports[`OctoRelayViewModel Should display a single popover for several upcoming events: .popover() 1`] = `
[
  [
    "destroy",
  ],
  [
    "destroy",
  ],
  [
    {
      "animation": false,
      "content": "<div><span>Nozzle Light goes <span class="label">OFF</span> <time id="time-tag-r1" datetime="2023-08-13T22:32:00.000Z" title="8/13/2023, 10:32:00 PM">in 2 minutes</time></span><button id="cancel-btn-r1" class="btn btn-mini" type="button">Cancel</button></div><div><span>Printer goes <span class="label">OFF</span> <time id="time-tag-r2" datetime="2023-08-13T22:35:00.000Z" title="8/13/2023, 10:35:00 PM">in 5 minutes</time></span><button id="cancel-btn-r2" class="btn btn-mini" type="button">Cancel</button></div>",
      "html": true,
      "placement": "bottom",
      "title": "<span>Several relay switches ahead</span><button id="pop-closer" type="button" class="close"><span class="fa fa-close fa-sm"></span></button>",
      "trigger": "manual",
    },
  ],
  [
    "show",
  ],
]
`;

exports[`OctoRelayViewModel Should display upcoming state popover for delay 15 and false target: .popover() 1`] = `
[
  [
    "destroy",
  ],
  [
    {
      "animation": false,
      "content": "<div><time id="time-tag-r1" datetime="2023-08-13T22:30:15.000Z" title="8/13/2023, 10:30:15 PM">in 15 seconds</time><button id="cancel-btn-r1" class="btn btn-mini" type="button">Cancel</button></div>",
      "html": true,
      "placement": "bottom",
      "title": "<span>Nozzle Light goes <span class="label">OFF</span></span><button id="pop-closer" type="button" class="close"><span class="fa fa-close fa-sm"></span></button>",
      "trigger": "manual",
    },
  ],
  [
    "show",
  ],
]
`;

exports[`OctoRelayViewModel Should display upcoming state popover for delay 15 and true target: .popover() 1`] = `
[
  [
    "destroy",
  ],
  [
    {
      "animation": false,
      "content": "<div><time id="time-tag-r1" datetime="2023-08-13T22:30:15.000Z" title="8/13/2023, 10:30:15 PM">in 15 seconds</time><button id="cancel-btn-r1" class="btn btn-mini" type="button">Cancel</button></div>",
      "html": true,
      "placement": "bottom",
      "title": "<span>Nozzle Light goes <span class="label">ON</span></span><button id="pop-closer" type="button" class="close"><span class="fa fa-close fa-sm"></span></button>",
      "trigger": "manual",
    },
  ],
  [
    "show",
  ],
]
`;

exports[`OctoRelayViewModel Should display upcoming state popover for delay 75 and false target: .popover() 1`] = `
[
  [
    "destroy",
  ],
  [
    {
      "animation": false,
      "content": "<div><time id="time-tag-r1" datetime="2023-08-13T22:31:15.000Z" title="8/13/2023, 10:31:15 PM">in 1.3 minutes</time><button id="cancel-btn-r1" class="btn btn-mini" type="button">Cancel</button></div>",
      "html": true,
      "placement": "bottom",
      "title": "<span>Nozzle Light goes <span class="label">OFF</span></span><button id="pop-closer" type="button" class="close"><span class="fa fa-close fa-sm"></span></button>",
      "trigger": "manual",
    },
  ],
  [
    "show",
  ],
]
`;

exports[`OctoRelayViewModel Should display upcoming state popover for delay 75 and true target: .popover() 1`] = `
[
  [
    "destroy",
  ],
  [
    {
      "animation": false,
      "content": "<div><time id="time-tag-r1" datetime="2023-08-13T22:31:15.000Z" title="8/13/2023, 10:31:15 PM">in 1.3 minutes</time><button id="cancel-btn-r1" class="btn btn-mini" type="button">Cancel</button></div>",
      "html": true,
      "placement": "bottom",
      "title": "<span>Nozzle Light goes <span class="label">ON</span></span><button id="pop-closer" type="button" class="close"><span class="fa fa-close fa-sm"></span></button>",
      "trigger": "manual",
    },
  ],
  [
    "show",
  ],
]
`;

exports[`OctoRelayViewModel Should display upcoming state popover for delay 150 and false target: .popover() 1`] = `
[
  [
    "destroy",
  ],
  [
    {
      "animation": false,
      "content": "<div><time id="time-tag-r1" datetime="2023-08-13T22:32:30.000Z" title="8/13/2023, 10:32:30 PM">in 3 minutes</time><button id="cancel-btn-r1" class="btn btn-mini" type="button">Cancel</button></div>",
      "html": true,
      "placement": "bottom",
      "title": "<span>Nozzle Light goes <span class="label">OFF</span></span><button id="pop-closer" type="button" class="close"><span class="fa fa-close fa-sm"></span></button>",
      "trigger": "manual",
    },
  ],
  [
    "show",
  ],
]
`;

exports[`OctoRelayViewModel Should display upcoming state popover for delay 150 and true target: .popover() 1`] = `
[
  [
    "destroy",
  ],
  [
    {
      "animation": false,
      "content": "<div><time id="time-tag-r1" datetime="2023-08-13T22:32:30.000Z" title="8/13/2023, 10:32:30 PM">in 3 minutes</time><button id="cancel-btn-r1" class="btn btn-mini" type="button">Cancel</button></div>",
      "html": true,
      "placement": "bottom",
      "title": "<span>Nozzle Light goes <span class="label">ON</span></span><button id="pop-closer" type="button" class="close"><span class="fa fa-close fa-sm"></span></button>",
      "trigger": "manual",
    },
  ],
  [
    "show",
  ],
]
`;

exports[`OctoRelayViewModel Should display upcoming state popover for delay 5000 and false target: .popover() 1`] = `
[
  [
    "destroy",
  ],
  [
    {
      "animation": false,
      "content": "<div><time id="time-tag-r1" datetime="2023-08-13T23:53:20.000Z" title="8/13/2023, 11:53:20 PM">in 1 hour</time><button id="cancel-btn-r1" class="btn btn-mini" type="button">Cancel</button></div>",
      "html": true,
      "placement": "bottom",
      "title": "<span>Nozzle Light goes <span class="label">OFF</span></span><button id="pop-closer" type="button" class="close"><span class="fa fa-close fa-sm"></span></button>",
      "trigger": "manual",
    },
  ],
  [
    "show",
  ],
]
`;

exports[`OctoRelayViewModel Should display upcoming state popover for delay 5000 and true target: .popover() 1`] = `
[
  [
    "destroy",
  ],
  [
    {
      "animation": false,
      "content": "<div><time id="time-tag-r1" datetime="2023-08-13T23:53:20.000Z" title="8/13/2023, 11:53:20 PM">in 1 hour</time><button id="cancel-btn-r1" class="btn btn-mini" type="button">Cancel</button></div>",
      "html": true,
      "placement": "bottom",
      "title": "<span>Nozzle Light goes <span class="label">ON</span></span><button id="pop-closer" type="button" class="close"><span class="fa fa-close fa-sm"></span></button>",
      "trigger": "manual",
    },
  ],
  [
    "show",
  ],
]
`;

exports[`OctoRelayViewModel Should push the model into the registry 1`] = `
{
  "construct": [Function],
  "dependencies": [
    "settingsViewModel",
    "loginStateViewModel",
  ],
}
`;
